Inactive Menu entries don't gray out Icons like text #48447

Closed
opened 2016-05-16 02:02:50 +02:00 by Vuk Gardašević · 5 comments

System Information
Win 7, X3 455, R7 360

Blender Version
Broken: 2.57, 2.70a, 6d3fdcc, 3045011

Short description of error
Using the Poll function does gray out the text entries of menu items, but doesn't the Icons.

Exact steps for others to reproduce the error
Here is a small Add on that represent the issue.

grayed_out_menu_icon_test.py

Load factory settings > search for "Test Menu Poll graying out Icons" addon and enable it.

Then in the 3Dview press Q in Object and Edit mode. In Object mode the two menu entries work, while it should be disabled in the Edit mode. Still the icons don't gray out like the text does.

test_menu_addon.jpg

**System Information** Win 7, X3 455, R7 360 **Blender Version** Broken: 2.57, 2.70a, 6d3fdcc, 3045011 **Short description of error** Using the Poll function does gray out the text entries of menu items, but **doesn't** the Icons. **Exact steps for others to reproduce the error** Here is a small Add on that represent the issue. [grayed_out_menu_icon_test.py](https://archive.blender.org/developer/F312346/grayed_out_menu_icon_test.py) Load factory settings > search for "Test Menu Poll graying out Icons" addon and enable it. Then in the 3Dview press Q in Object and Edit mode. In Object mode the two menu entries work, while it should be disabled in the Edit mode. Still the icons don't gray out like the text does. ![test_menu_addon.jpg](https://archive.blender.org/developer/F312347/test_menu_addon.jpg)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @VukGardasevic

Added subscriber: @VukGardasevic

Added subscriber: @NikoLeopold

Added subscriber: @NikoLeopold

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 19955bd152

This issue was referenced by 19955bd15209a92b1604e4c4894e8cce2546d9a5
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48447
No description provided.