Fix T48447: Inactive menu items don't grey-out icons